test my project no finish with lorem ipsum

--- a/3eme project/index.html
+++ b/3eme project/index.html
@@ -5,5 +5,65 @@
   <title></title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body><main id="main-doc">
+    <section id="lorem_ipsum1" class="main-section">
+      <header>lorem ipsum1</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
+      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
+      <ol>lorem ipsum</ol>
+      <li>Praesent</li>
+      <li>Pellentesque</li>
+      <li>tortor</li>
+      <li>habitant</li>
+      </ol>
+    </section>
+
+    <section id="lorem_ipsum2" class="main-section">
+      <header>lorem ipsum2</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
+      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
+      <ol>lorem ipsum</ol>
+      <li>Praesent</li>
+      <li>Pellentesque</li>
+      <li>tortor</li>
+      <li>habitant</li>
+      </ol>
+    </section>
+
+    <section id="lorem_ipsum3" class="main-section">
+      <header>lorem ipsum3</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
+      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
+      <ol>lorem ipsum</ol>
+      <li>Praesent</li>
+      <li>Pellentesque</li>
+      <li>tortor</li>
+      <li>habitant</li>
+      </ol>
+    </section>
+
+    <section id="lorem_ipsum4" class="main-section">
+      <header>lorem ipsum4</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
+      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
+      <ol>lorem ipsum</ol>
+      <li>Praesent</li>
+      <li>Pellentesque</li>
+      <li>tortor</li>
+      <li>habitant</li>
+      </ol>
+    </section>
+
+    <section id="lorem_ipsum5" class="main-section">
+      <header>lorem ipsum5</header>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
+      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
+      <ol>lorem ipsum</ol>
+      <li>Praesent</li>
+      <li>Pellentesque</li>
+      <li>tortor</li>
+      <li>habitant</li>
+      </ol>
+    </section>
+  </main>
   </body>
