project with lorem ipsum new add nav bar and css with little media querry

--- a/3eme project/index.html
+++ b/3eme project/index.html
@@ -5,7 +5,19 @@
   <title></title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body><main id="main-doc">
+<body>
+    <nav id="navbar">
+        <header>Lorem ipsum</header>
+        <ul>
+          <li><a class="nav-link" href="#lorem_ipsum1">lorem ipsum1</a></li>
+          <li><a class="nav-link" href="#lorem_ipsum2">lorem ipsum2</a></li>
+          <li><a class="nav-link" href="#lorem_ipsum3">lorem ipsum3</a></li>
+          <li><a class="nav-link" href="#lorem_ipsum4">lorem ipsum4</a></li>
+          <li><a class="nav-link" href="#lorem_ipsum5">lorem ipsum5</a></li>
+        </ul>
+      </nav>
+    
+    <main id="main-doc">
     <section id="lorem_ipsum1" class="main-section">
       <header>lorem ipsum1</header>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
