add txt and css aproximatif

--- a/3eme project/index.html
+++ b/3eme project/index.html
@@ -1,81 +1,83 @@
 <html lang="en">
-<head>
+    <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
+  <title>Cryptocurrency Documentation</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav id="navbar">
-        <header>Lorem ipsum</header>
+        <header>Cryptocurrency Documentation</header>
         <ul>
-          <li><a class="nav-link" href="#lorem_ipsum1">lorem ipsum1</a></li>
-          <li><a class="nav-link" href="#lorem_ipsum2">lorem ipsum2</a></li>
-          <li><a class="nav-link" href="#lorem_ipsum3">lorem ipsum3</a></li>
-          <li><a class="nav-link" href="#lorem_ipsum4">lorem ipsum4</a></li>
-          <li><a class="nav-link" href="#lorem_ipsum5">lorem ipsum5</a></li>
+          <li><a class="nav-link" href="#bitcoin">Bitcoin</a></li>
+          <li><a class="nav-link" href="#ethereum">Ethereum</a></li>
+          <li><a class="nav-link" href="#cardano">Cardano</a></li>
+          <li><a class="nav-link" href="#solana">Solana</a></li>
+          <li><a class="nav-link" href="#ripple">Ripple</a></li>
         </ul>
       </nav>
     
     <main id="main-doc">
-    <section id="lorem_ipsum1" class="main-section">
-      <header>lorem ipsum1</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
-      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
-      <ol>lorem ipsum</ol>
-      <li>Praesent</li>
-      <li>Pellentesque</li>
-      <li>tortor</li>
-      <li>habitant</li>
-      </ol>
+    <section id="bitcoin" class="main-section">
+      <header>Bitcoin</header>
+      <p>Bitcoin is the first cryptocurrency, created in 2009 by a person or group under the pseudonym Satoshi Nakamoto. It enables decentralized transactions without an intermediary like a bank.</p>
+      <p>Bitcoin operates on blockchain technology, ensuring the security and transparency of transactions. It is often considered a store of value, similar to gold.</p>
+    <ol>Objective of cryptocurrency</ol>
+            <li>High-performance blockchain</li>
+            <li>Support for dApps</li>
+            <li>Processes thousands of transactions per second</li>
+            <li>Growing popularity among developers</li>
+    </ol>
     </section>
 
-    <section id="lorem_ipsum2" class="main-section">
-      <header>lorem ipsum2</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
-      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
-      <ol>lorem ipsum</ol>
-      <li>Praesent</li>
-      <li>Pellentesque</li>
-      <li>tortor</li>
-      <li>habitant</li>
-      </ol>
+    <section id="ethereum" class="main-section">
+      <header>Ethereum</header>
+      <p>Ethereum, proposed in late 2013 and launched in 2015, is a decentralized platform that enables developers to build and deploy smart contracts and decentralized applications (dApps).</p>
+      <p>Ethereum introduced the concept of a programmable blockchain, allowing for more complex financial transactions and applications beyond simple currency transfers.</p>
+      <ol>Objective of cryptocurrency</ol>
+            <li>Smart contracts for automated transactions</li>
+            <li>Supports decentralized finance (DeFi) applications</li>
+            <li>Active development community and ongoing upgrades</li>
+            <li>ERC-20 token standard for creating new tokens</li>
+    </ol>
     </section>
 
-    <section id="lorem_ipsum3" class="main-section">
-      <header>lorem ipsum3</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
-      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
-      <ol>lorem ipsum</ol>
-      <li>Praesent</li>
-      <li>Pellentesque</li>
-      <li>tortor</li>
-      <li>habitant</li>
-      </ol>
+    <section id="cardano" class="main-section">
+        <header>Cardano</header>
+        <p>Cardano is a third-generation blockchain platform founded in 2017, known for its focus on scalability, sustainability, and interoperability. It aims to create a more balanced and secure ecosystem.</p>
+        <p>With a strong emphasis on academic research, Cardano utilizes a proof-of-stake consensus mechanism to ensure energy efficiency and improve transaction speeds.</p>
+        <ol>Objective of cryptocurrency</ol>
+            <li>Unique Ouroboros proof-of-stake protocol</li>
+            <li>Focus on formal verification and security</li>
+            <li>Support for multi-asset transactions</li>
+            <li>Active governance model for community involvement</li>
+     </ol>
+     </section>
+
+     <section id="solana" class="main-section">
+      <header>Solana</header>
+      <p>Solana is a high-performance blockchain platform that aims to provide fast and scalable decentralized applications and crypto projects. Launched in 2020, it boasts impressive transaction speeds.
+      <p>Utilizing a unique consensus mechanism called Proof of History (PoH), Solana can process thousands of transactions per second while maintaining low fees.</p>
+      <ol>
+            <li>Extremely fast transaction speeds</li>
+            <li>Low transaction costs for users</li>
+            <li>Strong ecosystem with various projects</li>
+            <li>Developer-friendly environment</li>
+     </ol>
     </section>
 
-    <section id="lorem_ipsum4" class="main-section">
-      <header>lorem ipsum4</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
-      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
-      <ol>lorem ipsum</ol>
-      <li>Praesent</li>
-      <li>Pellentesque</li>
-      <li>tortor</li>
-      <li>habitant</li>
-      </ol>
+    <section id="ripple" class="main-section">
+             <header>Ripple</header>
+             <p>Ripple is both a digital payment protocol and a cryptocurrency (XRP) designed to enable fast, low-cost international money transfers. It was created in 2012 and is widely used by financial institutions.</p>
+             <p>Unlike traditional cryptocurrencies, Ripple does not rely on mining and uses a consensus protocol to validate transactions quickly.</p>
+    <ol>Objective of cryptocurrency</ol>
+             <li>Instant cross-border transactions</li>
+             <li>Strong partnerships with banks and financial institutions</li>
+              <li>Focus on remittances and payment solutions</li>
+             <li>Low transaction fees compared to traditional methods</li>
+             </ol>
     </section>
-
-    <section id="lorem_ipsum5" class="main-section">
-      <header>lorem ipsum5</header>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non quam turpis. Curabitur luctus erat quis lacus porta finibus vitae non ligula. Phasellus a turpis vulputate, dapibus est nec, sagittis velit.</p><code>html lorem ipsum</code>
-      <p>Praesent id augue ante. Duis elementum ornare eros, bibendum imperdiet est interdum id. Nunc egestas eros nec ligula iaculis, nec convallis ligula varius. Aenean in ante volutpat, gravida lectus sed, ultrices sapien. Aenean egestas enim tortor, at sagittis augue pretium vitae. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam vitae porta enim.</p>
-      <ol>lorem ipsum</ol>
-      <li>Praesent</li>
-      <li>Pellentesque</li>
-      <li>tortor</li>
-      <li>habitant</li>
-      </ol>
-    </section>
+    </div>
   </main>
   </body>
