new project portfolio not finish is my base

--- a/4eme project/index.html
+++ b/4eme project/index.html
@@ -16,7 +16,7 @@
         <li><a class="nav-link" href="#works">How its Works</a></li>
         <li><a class="nav-link" href="#pricing">Pricing</a></li>
         </ul>
-        <img src="logo_polar.jpeg" alt="Logo" class="logo">
+        <img src="logo_polar.jpeg" alt="Logo polar" class="logo">
   </nav>
 
 <main>
@@ -26,12 +26,12 @@
         type="email" 
         id="email" 
         name="email"
-        placeholder="Entrez votre adresse email" 
+        placeholder="Enter your email" 
         required>
     <input 
         type="submit" 
         id="submit" 
-        value="Soumettre">
+        value="Submit">
 </form>
 
 <div class="header-image-block">
@@ -52,14 +52,10 @@
     <div class="item">Polar Skate Co. offers boards typically priced between €60-€100, clothing like t-shirts, hoodies, and jackets from €40-€150, and accessories such as hats and socks from €20-€50; limited editions and collaborations may cost more.</div>
 </div>
 <div class="video-container">
-    <iframe id="video"
-        width="560" 
-        height="315" 
-        src="https://www.youtube.com/embed/LV8dn3Uv48U" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-        allowfullscreen>
-    </iframe>
+    <video width="560" height="315" controls>
+        <source src="polar_promo.mp4" type="video/mp4">
+        
+    </video>
 </div>
 </main>
 </body>
