add roman numeral convert

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -100,7 +100,7 @@
         <h2>My Curriculum vitae</h2>
         <div class="picture_CV">
             <a href="https://www.canva.com/design/DADd2Ua35oE/zmQ8LyqFHymH4vszNUDWXw/view?utm_content=DADd2Ua35oE&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">
-                <img src="cvLucagongora.png" alt="Preview of curriculum vitae Luca Gongora">
+                <img src="cvLucagongora.jpg" alt="Preview of curriculum vitae Luca Gongora">
         </div>
     </section>
 
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="footer-signature">
-            <p>Signed, Luca Gongora</p>
+            <small>© 2024 Luca Gongora. All rights reserved.</small>
         </div>
     </footer>
    
